--- a/modules/ch1-intro/pages/s4-tasks-quiz.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz.adoc
@@ -2,7 +2,7 @@
 
 *Objective:* 
 
-Assess the learner's understanding of the scope of OpenStack operations with Red Hat OpenStack on OpenShift.
+Relate tasks to OpenStack administrators, operators, and other IT roles.
 
 == Questions
 
