--- a/modules/ch1-intro/pages/s3-operations-lecture.adoc
+++ b/modules/ch1-intro/pages/s3-operations-lecture.adoc
@@ -51,7 +51,7 @@ OpenStack Administrators have a split focus among OpenStack APIs, Kubernetes API
 image::s3-operations-lecture-fig-3.png[]
 // Exported from https://docs.google.com/presentation/d/1lPtAxaKH9P2SjgexIwBi5RxHOjIUQV44R5c4nnrug74/edit#slide=id.p
 
-For simplicity, previous figure the tools OpenStack Administrators use to interact with Kubernetes APIs, such as the OpenShift CLI and the OpenShift wbe console.
+For simplicity, the previous figure ommits the tools OpenStack Administrators use to interact with Kubernetes APIs and OpenShift clusters, such as the OpenShift CLI and the OpenShift web console.
 
 Notice that OpenStack Operators are shielded from the fact that an OpenStack cluster runs its control plane on OpenShift. They do not require direct access to OpenShift. They are able to work around application performance and availability issues using OpenStack APIs, for example by migrating a server instance to a different compute node, or by connecting a server instance to a different virtual network. All the information they need to perform they job is available from OpenStack APIs, and all actions they must perform are also. They are concerned only with the user-facing services of OpenStack.
 
