breaking the operations lecture, as in the course design, and skeletins for the remaining of ch1

--- a/modules/ch1-intro/nav.adoc
+++ b/modules/ch1-intro/nav.adoc
@@ -5,4 +5,7 @@
 ** xref:s3-operations-lecture.adoc[]
 ** xref:s4-tasks-quiz.adoc[]
 *** xref:s4-tasks-quiz-answers.adoc[]
-#** xref:section3.adoc[]
+** xref:s5-ui-lecture.adoc[]
+** xref:s6-ui-demo.adoc[]
+** xref:s7-review-quiz.adoc[]
+** xref:s8-summary.adoc[]
