--- a/modules/ch1-intro/pages/s4-tasks-quiz.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz.adoc
@@ -4,6 +4,8 @@
 
 Relate tasks to OpenStack administrators, operators, and other IT roles.
 
+WARNING: WIP
+
 == Questions
 
 // This quiz could include a matching or drag-and-drop portion but we cannot do that on Antora. :-(
