--- a/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
@@ -2,6 +2,8 @@
 
 == Red Hat OpenStack Operations Tasks
 
+WARNING: WIP
+
 1. Which of the following tasks are more likely to be performed by an OpenStack Operator, as opposed to a Linux System Administrator?
 
 * [ ] Installing RPM packages inside a RHEL VM. +
