--- a/modules/ch1-intro/pages/s4-tasks-quiz.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz.adoc
@@ -4,7 +4,8 @@
 
 Relate tasks to OpenStack administrators, operators, and other IT roles.
 
-WARNING: WIP
+WARNING: Work In Progress
+
 
 == Questions
 
