--- a/modules/ch1-intro/pages/s6-ui-demo.adoc
+++ b/modules/ch1-intro/pages/s6-ui-demo.adoc
@@ -4,5 +4,7 @@
 
 Demonstrate how an OpenStack operator accesses an OpenStack cluster to create and expose a simple VM-based workload.
 
-WARNING: WIP
+WARNING: Work In Progress
+
+== 
 
