--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,6 +1,8 @@
 = About This Course
 :navtitle: Home
 
+WARNING: Work in Progress
+
 == Introduction to OpenStack Services on OpenShift
 
 This is the first course for *IT professionals* who are new to Red Hat OpenStack Services on OpenShift. It requires no previous experience with OpenStack, but it requires some familiarity with Linux system administration and virtual machine management.
