--- a/modules/ch2-services/pages/s1-fundamental-lecture.adoc
+++ b/modules/ch2-services/pages/s1-fundamental-lecture.adoc
@@ -3,3 +3,5 @@
 *Objective:*
 
 Describe the OpenStack services required by typical applications and their virtual machines.
+
+WARNING: Work in Progress
